# Commitlabs-Contracts

./: ISSUE_267_IMPLEMENTATION.md  PR_209_DESCRIPTION.md  PR_213_DESCRIPTION.md  PR_216_DESCRIPTION.md  PR_236_DESCRIPTION.md  PR_242_DESCRIPTION.md  PR_267_DESCRIPTION.md  PR_277_DESCRIPTION.md  PR_CREATE_INSTRUCTIONS.md  PR_CREATION_INSTRUCTIONS.md  PR_CREATION_LINKS.md  PR_DESCRIPTION_FINAL.md  UNIT_TESTS_IMPLEMENTATION_SUMMARY.md  test_attestation_engine.ps1  validate_tests.ps1
contracts/commitment_nft/: Cargo.toml
contracts/commitment_nft/src/: benchmarks.rs  lib.rs  mint_signature_tests.rs  smoke_tests.rs  test_zero_address.rs  tests.rs
contracts/commitment_nft/test_snapshots/tests/: test_balance_of_after_minting.1.json  test_balance_updates_after_transfer.1.json  test_get_all_metadata.1.json  test_get_metadata.1.json  test_get_nfts_by_owner.1.json  test_is_active.1.json  test_is_expired.1.json  test_metadata_timestamps.1.json  test_mint.1.json  test_mint_multiple.1.json  test_mint_without_initialize_fails.1.json  test_owner_of.1.json  test_settle.1.json  test_settle_already_settled.1.json  test_settle_not_expired.1.json  test_token_exists.1.json  test_transfer.1.json  test_transfer_not_owner.1.json
contracts/mock_oracle/: Cargo.toml
contracts/mock_oracle/src/: lib.rs
contracts/shared_utils/: Cargo.toml  README.md
contracts/shared_utils/src/: access_control.rs  batch.rs  error_codes.rs  errors.rs  events.rs  fee.rs  fees.rs  lib.rs  math.rs  pausable.rs  rate_limiting.rs  storage.rs  tests.rs  time.rs  validation.rs
contracts/shared_utils/src/tests/: proptest_tests.rs
docs/: ALLOCATION_LOGIC_POOL_REGISTRY_AND_RISK_LEVELS.md  ATTESTATION_ENGINE_EDGE_CASES.md  ATTESTATION_TYPES_AND_COMPLIANCE.md  BUY_FLOW_TEST_IMPLEMENTATION.md  COMMITMENT_CORE_FORMAL_VERIFICATION_SCOPE.md  COMMITMENT_INTERFACE_ERRORS.md  COMMITMENT_MARKETPLACE_PAYMENT_TOKEN_ALLOWLIST.md  COMMITMENT_TRANSFORMATION_AUTHORIZATION.md  CONTRACT_FUNCTIONS.md  INTERFACE_SYNC.md  KNOWN_LIMITATIONS.md  MARKETPLACE_LISTING_LIFECYCLE.md  MOCK_ORACLE_TESTING.md  RISK_TRANCHES.md  SECURITY_CHECKLIST.md  SECURITY_CONSIDERATIONS.md  SHARED_UTILS_VALIDATION.md  TEST_COVERAGE.md  UPGRADES.md  (+5 more)
(+53 files in other folders)
