[package]
name = "commitment_nft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]
benchmark = []
legacy-test-suite = []
default = []

[dependencies]
soroban-sdk = "21.0.0"
shared_utils = { path = "../shared_utils" }
serde_json = "1.0.149"
rand = "0.10.0"
ed25519-dalek = "2.2.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
commitment_core = { path = "../commitment_core" }
