[package]
name = "shared_utils"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
testutils = ["soroban-sdk/testutils"]
fuzzing = ["proptest"]
default = []

[dependencies]
soroban-sdk = "21.0.0"
proptest = { version = "1.4.0", optional = true }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
