[package]
name = "shared_utils"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[features]
testutils = ["soroban-sdk/testutils"]
default = []

[dependencies]
soroban-sdk = "21.0.0"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
